test/official_tests/number/trailing_dot.lox
// error: {"line":2,"message":"Expect property name after '.'","type":"ParseError"}
123.;
